--- a/index.html
+++ b/index.html
@@ -213,174 +213,194 @@
                 <article class="lists-box">
                     <ul class="lists">
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT [한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT [한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>[번역] 전 최강 검사는 이세계 마법을 동경한다 1~33
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[번역] 전 최강 검사는 이세계 마법을 동경한다 1~33
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li class="adult">
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>[ 닥 터 슬 립 ] 초 현 실 능 력 자 들 스릴러 자체자막
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[ 닥 터 슬 립 ] 초 현 실 능 력 자 들 스릴러 자체자막
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>지원미궁 블랙 컴퍼니 3화 (BS11 1280x720 x264 AAC)
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>지원미궁 블랙 컴퍼니 3화 (BS11 1280x720 x264 AAC)
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i> [7월] 어벤져스의 운명을 바꾼 블랙위도우. 1080p 완벽자막
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i> [7월] 어벤져스의 운명을 바꾼 블랙위도우. 1080p 완벽자막
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li class="adult">
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>순간의 선택 골든타임.E25.210723.720p-NEXT
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>순간의 선택 골든타임.E25.210723.720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i> [괴기맨숀] 성.준X김.보.라.FHD.1080p
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i> [괴기맨숀] 성.준X김.보.라.FHD.1080p
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="html/view.html" class="img view-link">
-                                <div class="adult-box"></div>
-                                <img src="img/sample-img.png" alt="">
-                            </a>
-                            <div class="info">
-                                <a href="html/view.html" class="title view-link">
-                                    <p>
-                                        <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
-                                    </p>
-                                </a>
-                                <div class="etc">
-                                    <p class="cate">영화</p>
-                                    <p class="point">45P</p>
+                            <a href="html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="img/sample-img.png" alt="">
                                 </div>
-                            </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                     <a href="#n" class="more-btn">더보기<i></i></a>
