--- a/html/list.html
+++ b/html/list.html
@@ -192,7 +192,7 @@
                         <label for="galleryType" class="gallery ml-5"></label>
                     </div>
                 </article>
-                <article class="lists-box">
+                <article class="lists-box pb-50">
                     <ul class="lists">
                         <li>
                             <a href="../html/view.html">
