--- a/html/view.html
+++ b/html/view.html
@@ -80,6 +80,337 @@
                 </ul>
                 <a href="#" class="arrow-btn"></a>
             </div>
+            <div class="contents-box">
+                <h3 class="title">상세 내용</h3>
+                <div class="contents">
+                    <img src="../img/+contents_img.png" alt="">
+                </div>
+            </div>
+            <div class="diff-box">
+                <h3 class="title">판매자 다른 자료</h3>
+                <div class="list-cate">
+                    <a href="#" class="on">전체 980</a>
+                    <a href="#" class="ml-8">영화 980</a>
+                    <a href="#" class="ml-8">드라마 80</a>
+                </div>
+                <article class="lists-box">
+                    <ul class="lists">
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT [한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[번역] 전 최강 검사는 이세계 마법을 동경한다 1~33
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="adult">
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[ 닥 터 슬 립 ] 초 현 실 능 력 자 들 스릴러 자체자막
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>지원미궁 블랙 컴퍼니 3화 (BS11 1280x720 x264 AAC)
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <article class="paging-container mt-25">
+                    <div class="paging-box">
+                        <a href="#" class="prev"></a>
+                        <a href="#" class="on">1</a>
+                        <a href="#">2</a>
+                        <a href="#">3</a>
+                        <a href="#">4</a>
+                        <a href="#" class="next"></a>
+                    </div>
+                </article>
+            </div>
+            <div class="comment-box">
+                <h3 class="title">
+                    댓글
+                    <p class="info">전체 댓글 5</p>
+                </h3>
+                <form action="">
+                    <div class="score-box">
+                        <p>별점을 선택해주세요.</p>
+                        <div class="score">
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 1개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 1.5개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 2개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 2.5개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 3개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 3.5개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 4개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 4.5개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 5개</span></span>
+                            </label>
+                            <label class="score-label">
+                                <input type="radio" name="star" id="">
+                                <span class="score-img"><span class="blind">별 5.5개</span></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="create-box">
+                        <textarea name="" id="" placeholder="감상평이나 후기를 댓글로 남겨주세요. 사용 포인트의 10%를 돌려드립니다."></textarea>
+                        <input type="submit" value="등록">
+                    </div>
+                </form>
+                <table>
+                    <colgroup>
+                        <col width="*">
+                        <col style="width:6rem">
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <strong class="ellipsis">닉네임노출</strong>
+                                <p class="ellipsis">잘봤습니다. 감사합니다!^^</p>
+                            </td>
+                            <td>
+                                <div class="down-score">
+                                    <div style="width:95%"></div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <strong class="ellipsis">닉네임노출</strong>
+                                <p class="ellipsis">잘봤습니다. 감사합니다!^^</p>
+                            </td>
+                            <td>
+                                <div class="down-score">
+                                    <div style="width:95%"></div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="data-box">
+                <h3 class="title">비슷한 컨텐츠</h3>
+                <article class="lists-box gallery-type">
+                    <ul class="lists">
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT [한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[한드완결] 로스쿨.E01 ~ 16회. 완결 . [초.고화질] .720p-NEXT
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[번역] 전 최강 검사는 이세계 마법을 동경한다 1~33
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="adult">
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>[ 닥 터 슬 립 ] 초 현 실 능 력 자 들 스릴러 자체자막
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>지원미궁 블랙 컴퍼니 3화 (BS11 1280x720 x264 AAC)
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/view.html">
+                                <div class="img">
+                                    <div class="adult-box"></div>
+                                    <img src="../img/sample-img.png" alt="">
+                                </div>
+                                <div class="info">
+                                    <div class="title">
+                                        <p>
+                                            <i class="icon-adult"></i>지원미궁 블랙 컴퍼니 3화 (BS11 1280x720 x264 AAC)
+                                        </p>
+                                    </div>
+                                    <div class="etc">
+                                        <p class="cate">영화</p>
+                                        <p class="point">45P</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+            </div>
         </div>
         <!-- // container -->
         <!-- botMenu -->
