--- a/html/view.html
+++ b/html/view.html
@@ -421,7 +421,7 @@
             <a href="#n">
                 <img src="../img/exchange-funds-fill.png" alt="">충전샵
             </a>
-            <a href="#n">
+            <a href="../html/event.html">
                 <img src="../img/gift-2-line.png" alt="">이벤트
             </a>
             <a href="#n">
