--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#n">
+                    <a href="html/faq.html">
                         자주 묻는 질문
                     </a>
                 </li>
