--- a/html/attendance.html
+++ b/html/attendance.html
@@ -126,13 +126,11 @@
                 </div>
             </article>
             <article class="notice">
-                <p>
-                    <strong>이벤트 유의사항</strong>
-                    · 동일 IP를 사용하는 PC에서는 아이디가 다르더라도 출석 포인트가 지급되지 않습니다.<br />
-                    · 출석으로 지급된 포인트는 적립일로부터 30일간 이용 가능합니다.<br />
-                    · 비정상적인 방법으로의 이벤트 참여가 확인될 경우 제재될 수 있습니다.<br />
-                    · 이벤트 내용은 회사 사정에 따라 사전 공지 없이 변경될 수 있습니다.
-                </p>
+                <strong>이벤트 유의사항</strong>
+                <p data-icon="·">동일 IP를 사용하는 PC에서는 아이디가 다르더라도 출석 포인트가 지급되지 않습니다.</p>
+                <p data-icon="·">출석으로 지급된 포인트는 적립일로부터 30일간 이용 가능합니다.</p>
+                <p data-icon="·">비정상적인 방법으로의 이벤트 참여가 확인될 경우 제재될 수 있습니다.</p>
+                <p data-icon="·">이벤트 내용은 회사 사정에 따라 사전 공지 없이 변경될 수 있습니다.</p>
             </article>
         </div>
         <!-- // container -->
