--- a/html/inquiry.html
+++ b/html/inquiry.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="../js/front.js"></script>
-    <title>Filedal - 쿠폰등록</title>
+    <title>Filedal - 고객센터</title>
 </head>
 
 <body>
@@ -21,26 +21,12 @@
         <!-- subHeader -->
         <header id="subHeader">
             <a href="#" class="back-btn"></a>
-            <h2>쿠폰등록</h2>
+            <h2>고객센터</h2>
         </header>
         <!-- // subHeader -->
         <!-- container -->
-        <div id="container" class="coupon">
-            <article class="coupon-box">
-                <img src="../img/coupon_img.png" alt="">
-                <div class="input-box">
-                    <input type="text" placeholder="쿠폰번호를 입력해주세요.">
-                    <button type="button">등록</button>
-                </div>
-            </article>
-            <article class="notice">
-                <strong>쿠폰 등록시 유의사항</strong>
-                <p data-icon="·">무료 쿠폰은 비매품이며, 사거나 팔 수 없습니다.</p>
-                <p data-icon="·">이용권은 1인 1회만 사용이 가능하며, 다른 이용권의 중복 사용은 불가합니다.</p>
-                <p data-icon="·">쿠폰 이용 관련 문의는 1:1문의 및 고객센터를 이용하시기 바랍니다.</p>
-                <p data-icon="·">쿠폰 등록 시 적립된 포인트는 7일간 사용 가능합니다.</p>
-                <p data-icon="·">제휴 사이트에서 구매한 쿠폰은 협의된 내용대로 사용이 가능합니다.</p>
-            </article>
+        <div id="container" class="customer inquiry">
+
         </div>
         <!-- // container -->
         <!-- footer -->
