--- a/html/list.html
+++ b/html/list.html
@@ -151,7 +151,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#n">
+                    <a href="../html/faq.html">
                         자주 묻는 질문
                     </a>
                 </li>
